--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'com.thoughtworks.xstream:xstream:1.4.8'
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'ch.qos.logback:logback-classic:1.1.5'
+    implementation 'mysql:mysql-connector-java:5.1.38'
+    implementation 'org.hibernate:hibernate-agroal:5.4.22.Final'
 }
 
 task testGroups(type: Test) {
