Лекция 7.2. Object Relational Mapping (ORM) - правки

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'ch.qos.logback:logback-classic:1.1.5'
     implementation 'mysql:mysql-connector-java:5.1.38'
-    implementation 'org.hibernate:hibernate-agroal:5.4.22.Final'
+    implementation 'org.hibernate:hibernate-core:5.4.23.Final'
 }
 
 task testGroups(type: Test) {
