Лекция 8.3. Прямое взаимодействие с сервером по протоколу HTTP

--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'org.testng:testng:7.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 test {
