--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     implementation 'org.hamcrest:hamcrest:2.2'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'commons-net:commons-net:3.7.1'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.3'
+    implementation 'ch.qos.logback:logback-classic:1.1.5'
 }
 
 test {
