--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.3'
     implementation 'ch.qos.logback:logback-classic:1.1.5'
+    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 
 test {
