--- a/rest-sample/build.gradle
+++ b/rest-sample/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.apache.httpcomponents:fluent-hc:4.5.13'
-
+    implementation 'com.jayway.restassured:rest-assured:2.9.0'
 }
 
 
