--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -11,6 +11,16 @@ dependencies {
 }
 
 test {
-	useTestNG()
+    useTestNG {
+        suites 'src/test/resources/testng.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"
+    }
 }
-
