--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.3'
     implementation 'ch.qos.logback:logback-classic:1.1.5'
     implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
+    implementation 'javax.mail:mail:1.5.0-b01'
+    implementation 'mysql:mysql-connector-java:8.0.22'
+    implementation 'org.hibernate:hibernate-core:5.4.23.Final'
 }
 
 test {
