--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
-web.baseUrl = http://172.31.207.34ddressbook/
+web.baseUrl = http://192.168.1.4/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
-selenium.server = http://172.31.207.34/wd/hub
+selenium.server = http://192.168.1.4/wd/hub
